3.4
	+ Added necesary saveConfigRecursive afte initialSetup
	+ Migrated to use Plack as the application server instead of mod_perl
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
3.3
	+ Remove menu search from usercorner menu
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Use upstream Apache2::AuthCookie instead of forked version
	+ Removed old migration code from 3.0 to 3.2
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.5
	+ Do not try to migrate from 3.0 if module is not configured
3.1.4
	+ Delete unused constants
3.1.3
	+ Fixed error message.
3.1.2
	+ Added menu icon
	+ Added  EBox::UserCorner::CGI::Run to fix regressions and to not
	  load unallowed models
	+ Connect as the LDAP root user in read only mode to retrieve users DN.
	+ Added incompatiblity with external AD authentication mode
3.1.1
	+ Use new EBox::Users namespace instead of EBox::UsersAndGroups
3.1
	+ Removed 3.0.X migration code
	+ Depend on zentyal-core 3.1
3.0.6
	+ Fixed undefined variable warning when installing the package for
	  first time
3.0.5
	+ Create user journal directory in correct path. Migrate old
	  versions with incorrect path.
3.0.4
	+ Write to usercorner log with ut8f encoding
	+ Log correctly request authorization IP, init logger on loading
	  of user-corner
	+ Restricted permissions in log directories
	+ Removed unnecesary and misleading method 'new' from UserCorner::Auth
3.0.3
	+ Adapted to the new utf8 fixes
	+ Removed suprefluos calls to utf8::decode
3.0.2
	+ Added and used serviceId field for service certificates
3.0.1
	+ User corner is now allowed on slaves, except for password change
	+ Updated deprecated master/slave API calls
2.3.4
	+ Modification of listen port from the UI works again
2.3.3
	+ Fixed auth with SID filenames which contain spaces or other
	  confusing characters
2.3.2
	+ Adapted to new Model management framework
2.3.1