@@ -1,5 +1,6 @@
 3.4
-	+ Added necesary saveConfigRecursive afte initialSetup
+	+ User Corner service is now managed by HAProxy Service
+	+ Added necessary saveConfigRecursive after initialSetup
 	+ Migrated to use Plack as the application server instead of mod_perl
 	+ Use service instead of deprecated invoke-rc.d for init.d scripts
 	+ Set version to 3.4
